Thu Feb 20 07:47:10 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Connector.cpp:
          Put TList_Holder in a named namespace to resolve some
          invalid Intel C++ warnings

Thu Feb 20 01:51:00 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
          Catch exceptions when informing locator of child death.

        * orbsvcs/ImplRepo_Service/LiveCheck.h:
        * orbsvcs/ImplRepo_Service/LiveCheck.cpp:
          If a remove_server call is made during a handle_timeout, don't
          remove the entry right away, rather defer the removal until after
          the handle_timeout completes.

Wed Feb 19 23:39:59 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Be sure to use the correct server key to send a kill request to the
          activator.

        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
          Don't try to process an empty server Id string.

Wed Feb 19 20:26:32 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils_T.cpp:
        * orbsvcs/tests/Notify/Bug_3252_Regression/server.cpp:
        * tests/Bug_3574_Regression/test.cpp:
          Improved C++BuilderXE support

Wed Feb 19 01:57:07 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
          Be sure to check the JacORB server namespace in all instances when
          searching for an active server info entry.

        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:
          Only report a specific server as not found if the name comes back empty.

Tue Feb 18 16:06:39 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Throw a more-apt exception when the server requested to be killed
          is not running.
